syntax = "proto3";

package libreshark.hammerhead;
option csharp_namespace = "LibreShark.Hammerhead";

enum RomType {
  UNKNOWN_ROM_TYPE = 0x00;

  // GameShark, Action Replay, Equalizer, and Game Buster all use the same ROM format
  N64_GAMESHARK = 0x01;

  // AKA "Xploder 64"
  N64_XPLORER64 = 0x02;

  // GB Hunter and Game Booster use the same ROM format
  N64_GBHUNTER = 0x03;
}

message ChecksumSet {
  bytes crc32 = 1;
  bytes crc32c = 2;
  bytes md5 = 3;
  bytes sha1 = 4;
}

// TODO(CheatoBaggins): Create Slices for parsed values to aid debugging.
message Slice {
  uint32 start_index = 1;
  uint32 end_index = 2;
  uint32 length = 3;
}
